@@ -1,0 +1,3 @@
+# List of words that jwordsplitter would otherwise split incorrectly.
+# Use the pipe symbol (|) to mark the correct place to split the word.
+Sünder|ecke
