@@ -1,4 +1,9 @@
 Abend
+Sünder
+Sünde
+Recke
+Klima
+Ecke
 Sauerstoff
 Flasche
 Flaschen
